# grpo-turn-level-rewards

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: phase-1-retrieval-infra.md  phase-2-core-library.md  phase-3-data-pipeline.md  phase-4-training-smoke-test.md  phase-5-full-training-runs.md  phase-6-evaluation-comparison.md  phase-7-mt-ppo.md  phase-7b-full-ppo-runs.md  phase-8-llm-judge.md  phase-8b-full-judge-runs.md
docs/superpowers/plans/: 2026-07-04-phase-2-core-library-plan.md  2026-07-04-phase-3-data-pipeline-plan.md  2026-07-05-phase-4-training-smoke-test-plan.md  2026-07-23-phase-7-mt-ppo-plan.md  (+2 more)
results/: outcome_only_eval_metrics.json  outcome_only_lengthpenalty_eval_metrics.json  outcome_only_nocapprompt_eval_metrics.json  outcome_only_searchpenalty_eval_metrics.json  outcome_only_seed123_600steps_eval_metrics.json  turn_level_eval_metrics.json  turn_level_lengthpenalty_eval_metrics.json  turn_level_nocapprompt_eval_metrics.json  turn_level_searchpenalty_eval_metrics.json  turn_level_seed123_600steps_eval_metrics.json
scripts/: compare_runs.py  retrieval_server.py  setup_retrieval.sh  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_phase6.py  verify_phase7.py  verify_retrieval.py
src/turn_level_rewards/: data.py  env.py  evaluate.py  metrics.py  rewards.py  train.py  train_ppo.py
tests/unit/: test_compare_runs.py  test_data.py  test_env.py  test_evaluate.py  test_metrics.py  test_rewards.py  test_train.py  test_train_ppo.py
(+6 files in other folders)
