[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grpo-turn-level-rewards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.139.0",
    "huggingface-hub>=1.22.0",
    "jmespath>=1.0.1",
    "matplotlib>=3.10.0",
    "pydantic>=2.13.4",
    "pyserini>=2.3.0",
    "requests>=2.34.2",
    "torchvision>=0.27.1",
    "trackio>=0.29.0",
    "trl>=1.7.1",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.uv]
default-groups = []

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line-length is enforced by the formatter instead
]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.13"

[tool.hatch.build.targets.wheel]
packages = ["src/turn_level_rewards"]

[tool.pytest.ini_options]
pythonpath = ["."]
